--- a/css/main.css
+++ b/css/main.css
@@ -91,5 +91,9 @@ blockquote {
   color: #666;
   text-align: right;
   float: left;
-
+  width: 15em;
+  margin-right: 1em;
+  margin-left: -7em;
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
 }
