--- a/css/main.css
+++ b/css/main.css
@@ -102,5 +102,6 @@ figure {
   display: inline-block;
   width: 300px;
   float:right;
-
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
 }
