--- a/css/main.css
+++ b/css/main.css
@@ -104,4 +104,6 @@ figure {
   float:right;
   border-top: 2px solid #333;
   border-bottom: 2px solid #333;
+  padding-top: .2em;
+  margin-right: -7em;
 }
