--- a/css/main.css
+++ b/css/main.css
@@ -105,5 +105,12 @@ figure {
   border-top: 2px solid #333;
   border-bottom: 2px solid #333;
   padding-top: .2em;
+  padding-left: .4em;
+  margin: 0;
   margin-right: -7em;
+}
+
+figcaption {
+  font-size: .875rem;
+  font-style: italic;
 }
