--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,16 @@ figcaption {
   font-style: italic;
 }
 
-p:nth-child(1)::first-letter {
-  font-size: 5rem;
+p:nth-child(1)::first-letter:not(blockquote) {
+display: inline-block;
+float: left;
+font-size: 5rem;
+background-color: #666;
+color: #f2f2f2;
+border-top: 2px solid #333;
+border-bottom: 2px solid #333;
+font-style: normal;
+padding: .2em;
+margin-right: .2em;
+margin-left: -.3em;
 }
